--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
     "cdbreact": "^1.5.18",
+    "emailjs": "^4.0.2",
+    "emailjs-com": "^3.2.0",
     "mdb-react-ui-kit": "^6.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
